lab1/Test/L1-A-6-41.output
Error Type A at Line 6
Error Type B at Line 8
Error Type B at Line 11
Error Type A at Line 15
