lab1/Test/L1-A-6-41.cmm
struct {
  int Za1Im5F = - KkF4WZib3pg1Anjza * U6me9uy * Dniu9_cQ 
    / cf / F0nvvpdkuTMLArK1O / OxWyQY105idwWR / QEcT1hSBqU 
    * LmkrpBOQz6j == WETLzyHoyf9MleqWVS >= hMrL3iXctx 
    <= hT , XVr5S60 = vB , PM6qJuBGOZzElqyt1o ;
}H3iL02vArI ( ) ^{
  struct pxF8r6zcx6d87xl9wx3 wLdwpc9m6Gd9fUU7W [ 1943499775 
    ] [ 2104817837 ] [  170719350 ] = - LeaOQ = F9lC2bjrkGuObQ96J1dK 
    ;
  struct nUBlxfEIvw733ic1Wwyo {
  }qs4CLInj7NwJFAoteVrX [ ] = h2 ;
}
int ;
float ;
float #;
